=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_02-dev

fix bug that would hose child if a croak() happened, be it from a
syntax error, Carp::croak(), etc.  remove child_terminate() hack that
was blaming the Perl stack being corrupt

Apache::StatINC can now be configured to write debug stuff with
a PerlSetVar [Ask Bjoern Hansen <ask@netcetera.dk>]

perl_startup() will now check the Apache.pm $VERSION

fixups for building Stronghold 2.4

new Apache::File module

send_fd() will now accept an optional length argument

HTTP_NOT_MODIFED added to Apache::Constants EXPORT_OK, removed
duplicate HTTP_NOT_ACCEPTABLE entry

if there is a Perl parse error in <Perl> sections, return $@ so Apache
can properly report the problem 

Apache::PerlRun subclass-able-ness near complete, see new example
modules Apache::RegistryNG and Apache::RegistryBB

fix compile problem under aix [Ed Hill <ed-hill@uiowa.edu>]

fix 'make test' @INC problem under NT, thanks to Dale Couch

=item 1.15_01 - September 19, 1998

USE_DSO=1 may be fixed on some platforms w/ current 1.3.2-dev
for those who are not, e.g. linux, can try a workaround by giving
PERL_DSO_UNLOAD to Makefile.PL or by setting the PERL_DSO_UNLOAD
environment variable

fix bug in Apache::Registry if $r->uri eq "/", thanks to Mike Wertheim
for the spot

Added Doug Bagley's Apache::SizeLimit [Brian Moseley <ix@maz.org>]

a Perl syntax error may corrupt the Perl stack, rendering the
process useless, so we now child_terminate() if this is the case  
(thanks to Ken Williams for the Apache::Death bug illustration)

<Perl> sections will now report configuration syntax errors

added Apache::SubRequest->bytes_sent method

added Apache::Server->register_cleanup method

DYNAMIC=1 works again

Apache::PerlRun will now save/restore %INC to cure problem with
"library" files that don't include a package delaration

global renames: $Apache::Server{Re}Starting -> $Apache::Server::{Re}Starting
