@@ -3,12 +3,18 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- need to re-think Apache::PerlRun's local %INC
-  (maybe Apache::PerlRun::handler should just child_exit()?)
+- forking under Apache::Registry, exit vs CORE::exit 
+
+- DirectoryIndex breaks now that we accept DIR_MAGIC_TYPE
+
+- PerlInitHandler broken?
+
+- files that have been created after the server's (child?) startup are
+  being reported with negative age with -M test under Apache::Registry. 
+  The workaround is to add $^T = time; at the beginning of the scripts. But
+  it would be much better if the Apache::Registry will do that 
 
 - turn of strip of httpd during 'make install'
-
-- $ENV{PATH}
 
 - 'make htmldoc' (Brian Moseley)
 
